--- a/PMSCRM/Views/Login/Login.cshtml
+++ b/PMSCRM/Views/Login/Login.cshtml
@@ -9,15 +9,22 @@
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Include your custom CSS -->
     <link rel="stylesheet" href="~/css/login.css">
 </head>
 <body>
     <div class="login-container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
         <form class="login-form text-center" method="post" action="/User/Login" style="width: 300px;">
+
             @if (ViewBag.Message != null)
             {
                 <div class="alert alert-danger">@ViewBag.Message</div>
+            }
+
+            @if (TempData.Peek("ResetSuccessMessage") != null)
+            {
+                <div class="alert alert-success">
+                    @TempData["ResetSuccessMessage"]
+                </div>
             }
 
             <div class="form-group mb-3">
@@ -31,7 +38,7 @@
                     <input type="checkbox" class="form-check-input" name="RememberMe" id="remember" value="true">
                     <label for="remember" class="ms-2">Remember Me</label>
                 </div>
-                <a href="#">Forgot Password</a>
+                <a href="/User/ForgotPassword">Forgot Password</a>
             </div>
             <button type="submit" class="btn mt-4 btn-login btn-block w-100 text-uppercase rounded-pill btn-lg">Login</button>
         </form>
