--- a/PMSCRM/Views/User/EditUser.cshtml
+++ b/PMSCRM/Views/User/EditUser.cshtml
@@ -1,5 +1,48 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model PMSCRM.Models.User
+
 @{
+    ViewData["Title"] = "Edit User";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h3 class="fw-bold fs-4 mb-3">Edit User</h3>
+
+<form class="was-validated" asp-action="EditUser" asp-route-id="@Model.UserId" method="post">
+    <div class="mb-3 mt-3">
+        <label for="roleId" class="form-label">Role ID</label>
+        <input type="text" class="form-control" id="roleId" name="RoleId" value="@Model.RoleId" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3 mt-3">
+        <label for="emailAddress" class="form-label">Email</label>
+        <input type="text" class="form-control" id="emailAddress" name="EmailAddress" value="@Model.EmailAddress" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3 mt-3">
+        <label for="firstName" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="firstName" name="FirstName" value="@Model.FirstName" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3 mt-3">
+        <label for="lastName" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="lastName" name="LastName" value="@Model.LastName" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3 mt-3">
+        <label for="phoneNumber" class="form-label">Phone Number</label>
+        <input type="text" class="form-control" id="phoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <button type="submit" class="btn btn-primary mt-3">Save Changes</button>
+    <a href="/Task/ViewUsers" class="btn btn-secondary mt-3">Cancel</a>
+</form>
