--- a/PMSCRM/Views/Shared/_Layout.cshtml
+++ b/PMSCRM/Views/Shared/_Layout.cshtml
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PMSCRM</title>
 
-
-    
     <!-- Lineicons and Bootstrap CSS -->
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -56,12 +54,6 @@
                         <li class="sidebar-item">
                             <a asp-area="" asp-controller="Task" asp-action="ViewTasks" class="sidebar-link">View Tasks</a>
                         </li>
-                        @* <li class="sidebar-item">
-                            <a asp-area="" asp-controller="Task" asp-action="EditTask" class="sidebar-link">Update</a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a asp-area="" asp-controller="Task" asp-action="DeleteTask" class="sidebar-link">Delete</a>
-                        </li> *@
                     </ul>
                 </li>
 
@@ -78,15 +70,8 @@
                         <li class="sidebar-item">
                             <a asp-area="" asp-controller="Area" asp-action="ViewAreas" class="sidebar-link">View Areas</a>
                         </li>
-                        @* <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Update</a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Delete</a>
-                        </li> *@
                     </ul>
                 </li>
-
 
                 <!--Customers-->
                 <li class="sidebar-item">
@@ -102,18 +87,8 @@
                         <li class="sidebar-item">
                             <a asp-area="" asp-controller="Customer" asp-action="ViewCustomers" class="sidebar-link">View Customers</a>
                         </li>
-                        @* <li class="sidebar-item">
-                             <a href="#" class="sidebar-link">Update</a>
-                        </li>
-                        <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Delete</a>
-                        </li> *@
                     </ul>
-
                 </li>
-            
-            
-
 
             <!--Roles-->
             <li class="sidebar-item">
@@ -129,18 +104,8 @@
                     <li class="sidebar-item">
                         <a asp-area="" asp-controller="Role" asp-action="ViewRoles" class="sidebar-link">View Roles</a>
                     </li>
-                    @* <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Update</a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Delete</a>
-                    </li> *@
                 </ul>
             </li>
-            
-            
-            
-
 
             <!--Companies-->
             <li class="sidebar-item">
@@ -156,18 +121,9 @@
                     <li class="sidebar-item">
                         <a asp-area="" asp-controller="Company" asp-action="ViewCompanies" class="sidebar-link">View Companies</a>
                     </li>
-                    @* <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Update</a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Delete</a>
-                    </li> *@
                 </ul>
             </li>
             
-            
-            
-
             <!--Process-->
             <li class="sidebar-item">
                 <a href="Process/process.html" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
@@ -182,12 +138,6 @@
                     <li class="sidebar-item">
                             <a asp-area="" asp-controller="Process" asp-action="ViewProcesses" class="sidebar-link">View Processes</a>
                     </li>
-                    @* <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Update</a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Delete</a>
-                    </li> *@
                 </ul>
             </li>
 
@@ -205,12 +155,6 @@
                     <li class="sidebar-item">
                             <a asp-area="" asp-controller="User" asp-action="ViewUsers" class="sidebar-link">View Users</a>
                     </li>
-                    @* <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Update</a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Delete</a>
-                    </li> *@
                 </ul>
             </li>
 
@@ -218,7 +162,7 @@
                 <li class="sidebar-item">
                     <a href="User/user.html" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
                        data-bs-target="#taskProcessArea" aria-expanded="false" aria-controls="taskProcessArea">
-                        <i class="lni lni-users"></i>
+                        <i class="lni lni-menu-cheesburger"></i>
                         <span>Task-Process-Area</span>
                     </a>
                     <ul id="taskProcessArea" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
@@ -228,18 +172,8 @@
                         <li class="sidebar-item">
                             <a asp-area="" asp-controller="TaskProcessArea" asp-action="ViewTaskProcessAreas" class="sidebar-link">View TaskProcessAreas</a>
                         </li>
-                        @* <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Update</a>
-                        </li>
-                        <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Delete</a>
-                        </li> *@
                     </ul>
                 </li>
-
-
-            
-
 
                 <!-- Settings -->
                 <li class="sidebar-item">
@@ -316,7 +250,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @* <script src="~/js/site.js"></script> *@
 
     <!-- Optional Scripts Section -->
     @RenderSection("Scripts", required: false)
