--- a/PMSCRM/Views/Customer/AddCustomer.cshtml
+++ b/PMSCRM/Views/Customer/AddCustomer.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h3 class="fw-bold fs-4 mb-3">Customer</h3>
-
+<div class="card shadow-sm p-4 mb-4">
 <form class="was-validated" asp-controller="Customer" asp-action="AddCustomer" method="post">
 
     <div class="mb-3">
@@ -52,4 +52,4 @@
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
 </form>
 
-
+</div>
