--- a/PMSCRM/Views/TaskProcessArea/AddTaskProcessArea.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/AddTaskProcessArea.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h3 class="fw-bold fs-4 mb-3">Add Task Process Area</h3>
-
+<div class="card shadow-sm p-4 mb-4">
 <form class="was-validated" asp-controller="TaskProcessArea" asp-action="AddTaskProcessArea" method="post">
     <div class="mb-3">
         <label for="TaskId" class="form-label">Select Task</label>
@@ -37,3 +37,5 @@
 
     <button type="submit" class="btn btn-primary mt-3">Add Task Process Area</button>
 </form>
+
+</div>
