--- a/PMSCRM/Views/Role/AddRole.cshtml
+++ b/PMSCRM/Views/Role/AddRole.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h3 class="fw-bold fs-4 mb-3">Role</h3>
-
+<div class="card shadow-sm p-4 mb-4">
 <form class="was-validated" asp-controller="Role" asp-action="AddRole" method="post">
 
     <div class="mb-3">
@@ -15,3 +15,5 @@
 
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
 </form>
+
+</div>
