--- a/PMSCRM/Views/Role/ViewRoles.cshtml
+++ b/PMSCRM/Views/Role/ViewRoles.cshtml
@@ -10,9 +10,11 @@
 @if (Model != null && Model.Any())
 {
     <table class="table table-striped">
-        <thead>
+        <thead class="table-dark">
             <tr>
                 <th>Name</th>
+                <th>Actions</th>
+
             </tr>
         </thead>
         <tbody>
