--- a/PMSCRM/Views/Task/AddTask.cshtml
+++ b/PMSCRM/Views/Task/AddTask.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h3 class="fw-bold fs-4 mb-3">Tasks</h3>
-
+<div class="card shadow-sm p-4 mb-4">
 <form class="was-validated" asp-controller="Task" asp-action="AddTask" method="post">
 
     <div class="mb-3">
@@ -23,3 +23,5 @@
 
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
 </form>
+
+    </div>
