--- a/PMSCRM/Views/User/ViewUsers.cshtml
+++ b/PMSCRM/Views/User/ViewUsers.cshtml
@@ -12,8 +12,8 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>User ID</th>
-                <th>Role ID</th>
+@*                 <th>User ID</th>
+                <th>Role ID</th> *@
                 <th>Email</th>
                 <th>First Name</th>
                 <th>Last Name</th>
@@ -24,8 +24,8 @@
             @foreach (var user in Model)
             {
                 <tr>
-                    <td>@user.UserId</td>
-                    <td>@user.RoleId</td>
+@*                     <td>@user.UserId</td>
+                    <td>@user.RoleId</td> *@
                     <td>@user.EmailAddress</td>
                     <td>@user.FirstName</td>
                     <td>@user.LastName</td>
