--- a/PMSCRM/wwwroot/css/site.css
+++ b/PMSCRM/wwwroot/css/site.css
@@ -16,6 +16,7 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  height:100vh;
 }
 
 
@@ -38,19 +39,20 @@ li {
 }
 
 body {
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
 }
 
 .wrapper {
     display: flex;
-/*    min-height: 100vh;*/
+    min-height: 100vh;
     align-items: stretch;
 }
 
 .main {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+/*    min-height: 100vh;*/
     width: 100%;
     overflow: hidden;
     transition: all 0.35s ease-in-out;
@@ -66,8 +68,10 @@ body {
     background-color: #B7E0FF;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+/*    height: 100vh;*/
     justify-content: space-between;
+/*    min-height: 100vh;*/
+    /*overflow-y: auto;*/
 }
 
     #sidebar.expand {
