--- a/PMSCRM/Views/Shared/_Layout.cshtml
+++ b/PMSCRM/Views/Shared/_Layout.cshtml
@@ -237,6 +237,29 @@
                     </ul>
                 </li>
 
+                <!--Task Process Area User Customer-->
+                <li class="sidebar-item">
+                    <a href="User/user.html" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
+                       data-bs-target="#taskProcessAreaUserCustomer" aria-expanded="false" aria-controls="taskProcessAreaUserCustomer">
+                        <i class="lni lni-users"></i>
+                        <span>Task-Process-Area-User-Customer</span>
+                    </a>
+                    <ul id="taskProcessAreaUserCustomer" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                        <li class="sidebar-item">
+                            <a asp-area="" asp-controller="TaskProcessAreaUserCustomer" asp-action="AddTaskProcessAreaUserCustomer" class="sidebar-link">Add TaskProcessAreaUserCustomer</a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a asp-area="" asp-controller="TaskProcessAreaUserCustomer" asp-action="ViewTaskProcessAreaUserCustomer" class="sidebar-link">View TaskProcessAreas</a>
+                        </li>
+                        @* <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Update</a>
+                        </li>
+                        <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Delete</a>
+                        </li> *@
+                    </ul>
+                </li>
+
 
             
 
