--- a/PMSCRM/Views/TaskProcessArea/AddTaskProcessArea.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/AddTaskProcessArea.cshtml
@@ -26,14 +26,14 @@
         <div class="invalid-feedback">Please select a process.</div>
     </div>
 
-    <div class="mb-3">
+@*     <div class="mb-3">
         <label for="AreaId" class="form-label">Select Area</label>
         <select asp-for="AreaId" asp-items="Model.Areas" class="form-select" required>
             <option value="">Choose an area...</option>
         </select>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please select an area.</div>
-    </div>
+    </div> *@
 
     <button type="submit" class="btn btn-primary mt-3">Add Task Process Area</button>
 </form>
