--- a/PMSCRM/Views/TaskProcessArea/DeleteTaskProcessArea.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/DeleteTaskProcessArea.cshtml
@@ -14,7 +14,7 @@
 <div>
     <p><strong>Task Name:</strong> @Model.TaskName</p>
     <p><strong>Process Name:</strong> @Model.ProcessName</p>
-    <p><strong>Area Name:</strong> @Model.AreaName</p>
+@*     <p><strong>Area Name:</strong> @Model.AreaName</p> *@
     <p><strong>Timestamp:</strong> @Model.Timestamp.ToString("g")</p>
 </div>
 
