--- a/PMSCRM/Views/TaskProcessArea/EditTaskProcessArea.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/EditTaskProcessArea.cshtml
@@ -26,13 +26,13 @@
         <div class="invalid-feedback">Please select a process.</div>
     </div>
 
-    <div class="mb-3">
+@*     <div class="mb-3">
         <label for="AreaId" class="form-label">Area</label>
         <select asp-for="AreaId" asp-items="Model.Areas" class="form-select" required>
             <option value="">Select an Area</option>
         </select>
         <div class="invalid-feedback">Please select an area.</div>
-    </div>
+    </div> *@
 
     <button type="submit" class="btn btn-primary mt-3">Update Task Process Area</button>
 </form>
