--- a/PMSCRM/Views/TaskProcessArea/ViewTaskProcessAreas.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/ViewTaskProcessAreas.cshtml
@@ -12,7 +12,7 @@
         <tr>
             <th>Task Name</th>
             <th>Process Name</th>
-            <th>Area Name</th>
+@*             <th>Area Name</th> *@
             <th>Timestamp</th>
             <th>Actions</th>
         </tr>
@@ -25,7 +25,7 @@
                 <tr>
                     <td>@item.TaskName</td>
                     <td>@item.ProcessName</td>
-                    <td>@item.AreaName</td>
+@*                     <td>@item.AreaName</td> *@
                     <td>@item.Timestamp.ToString("g")</td> 
                     <td>
                        
