--- a/PMSCRM/Views/Process/ViewProcesses.cshtml
+++ b/PMSCRM/Views/Process/ViewProcesses.cshtml
@@ -2,20 +2,21 @@
 
 @{
     ViewData["Title"] = "View Processes";
-    Layout = "~/Views/Shared/_Layout.cshtml"; 
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h3 class="fw-bold fs-4 mb-3">Process List</h3>
 
 @if (Model != null && Model.Any())
 {
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead class="table-dark">
             <tr>
                 <th>Process Name</th>
+                <th>Area Name</th> 
                 <th>Duration (hours)</th>
                 <th>Description</th>
-                <th>Actions</th>
+                <th class="text-end">Actions</th> 
             </tr>
         </thead>
         <tbody>
@@ -27,14 +28,24 @@
                             @process.Name
                         </a>
                     </td>
+                    <td>
+                        @if (process.Area != null)
+                        {
+                            @process.Area.Name
+                        }
+                        else
+                        {
+                            <span>No Area Assigned</span> 
+                        }
+                    </td>
                     <td>@process.Duration</td>
                     <td>
                         @if (!string.IsNullOrEmpty(process.Description))
                         {
                             @if (process.Description.Length > 50)
                             {
-                                <span>@process.Description.Substring(0, 50)...</span> 
-                                <a href="/Process/Details/@process.ProcessId" class="text-decoration-none">Read More</a> 
+                                <span>@process.Description.Substring(0, 50)...</span>
+                                <a href="/Process/Details/@process.ProcessId" class="text-decoration-none">Read More</a>
                             }
                             else
                             {
@@ -43,11 +54,12 @@
                         }
                         else
                         {
-                            <span>No description available.</span> 
+                            <span>No description available.</span>
                         }
                     </td>
-                    <td>
-                        <a href="/Process/EditProcess/@process.ProcessId" class="btn btn-primary btn-sm">Edit</a>
+                    <td class="text-end">
+                       
+                        <a href="/Process/EditProcess/@process.ProcessId" class="btn btn-primary btn-sm me-1">Edit</a>
                         <a href="/Process/DeleteProcess/@process.ProcessId" class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
