--- a/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomer.cshtml
+++ b/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomer.cshtml
@@ -29,8 +29,12 @@
                         <td class="text-center small">@item.CustomerName</td>
                         <td class="text-center small">@item.StartDate.ToString("yyyy-MM-dd")</td>
                         <td class="text-center small">@item.EndDate.ToString("yyyy-MM-dd")</td>
-                        <td class="text-center small">@((TaskStatus)item.Status)</td>
+                        <td class="text-center small">@((PMSCRM.Utilities.TaskStatus)item.Status)</td>
                         <td class="text-center small">@item.Timestamp.ToString("yyyy-MM-dd HH:mm")</td>
+                        <td>
+                            <a href="@Url.Action("EditTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-primary btn-sm custom">Edit</a>
+                            <a href="@Url.Action("DeleteTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-danger btn-sm custom" onclick="return confirm('Are you sure you want to delete this Task Process Area?');">Delete</a>
+                        </td>
                     </tr>
                 }
             }
@@ -43,3 +47,10 @@
         </tbody>
     </table>
 </div>
+
+<style>
+    .custom {
+        width: 78px !important;
+    }
+</style>
+
